Tue Oct 29 10:50:01 1996    <layer@HOBART>

	* fi-subproc.el: bug3729: on windows, fi:common-lisp asks for
	executable and image file, as well as all the other questions
	asked on unix.

*******************************************************************************
2.0.20.alpha.7 release for ACL on Windows
*******************************************************************************

Mon Oct 21 11:03:11 1996    <layer@HOBART>

	* fi-subproc.el: make sure dlisp arguments are first.

Mon Oct 14 17:23:20 1996    <layer@HOBART>

	* fi-keys.el: fully qualify packages (db -> debugger)

*******************************************************************************
2.0.20.alpha.6 release for ACL on Windows
*******************************************************************************

Thu Oct 10 17:31:59 1996    <layer@HOBART>

	* fi-keys.el: fix last rev

Thu Oct 10 14:49:10 1996  Kevin Layer  <layer@freezer>

	* fi-clman.el: use fi::library-directory
	* fi-keys.el: put back newline hack for win95's command.com
	* fi-site-init.el: load-file-name not available in all versions of
	emacs

Wed Oct  9 01:17:25 1996  Kevin Layer  <layer@freezer>

	* Makefile: add `tiger'

Wed Oct  9 00:57:03 1996  Kevin Layer  <layer@freezer>

	* Makefile: fix rdist rule

*******************************************************************************
2.0.20.alpha.5 release for ACL on Windows
*******************************************************************************

Thu Oct 03 14:01:48 1996    <layer@HOBART>

	* fi-keys.el: remove windows newline hack (fix it for real
	elsewhere)
	* fi-shell.el: do "cmd /q" on NT so newlines work
	* fi-version.el: new variable *on-windows-nt*
	* makefile.win32: add clman.exe to default rule

Thu Oct 03 10:55:11 1996    <layer@HOBART>

	* clman.c: use network byte order
	* clman.h: use network byte order
	* makefile.win32: use wsock32.lib for network byte order routines

Thu Oct  3 10:53:53 1996  Kevin Layer  <layer@freezer>
