@@ -1,5 +1,8 @@
 Tue Oct 29 10:50:01 1996    <layer@HOBART>
 
+	* fi-basic-lep.el: get rid of compiler warnings
+	* fi-lep.el: completions to *Completions* instead of *Help*
+
 	* fi-subproc.el: bug3729: on windows, fi:common-lisp asks for
 	executable and image file, as well as all the other questions
 	asked on unix.
